# yakulingo

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DISTRIBUTION.md  LICENSE  README.md  app.py  build_exe.py  codex_prompt.md  config.json  config_manager.py  debug_layout.py  download_wheels.ps1  glossary.csv  install.bat  install.ps1  install_context_menu.py  install_deps.bat  make_distribution.bat  pdf_translator.py  prompt.txt  prompt_en_to_jp.txt  prompt_excel_en_to_jp.txt  prompt_jp_to_en.txt  prompt_pdf_en_to_jp.txt  prompt_pdf_jp_to_en.txt  pyproject.toml  pyrightconfig.json  remove.bat  remove.ps1  requirements.txt  requirements_pdf.txt  run.bat  run.vbs  run_app.bat  run_resident_dev.bat  setup.bat  setup.ps1  setup_shortcut.bat  (+14 more)
.github/workflows/: build-launcher.yml  build_llama_cpp_cuda_linux.yml  runpod-morning-resume.yml  runpod-window-stop.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
config/: settings.json  settings.template.json
docs/: ADR_LOCAL_AI_PROMPT_DELIVERY.md  AI_HANDOFF_MAZDA_LOCAL_LLM_DEMO_2026-02-21.md  BYTES_SETTINGS_MAPPING.md  COPILOT_MIGRATION.md  DEMO_SUCCESS_CRITERIA_2026-02-21.md  DISTRIBUTION.md  HF_SPACES.md  HF_SPACES_LLAMA_CPP_CUDA.md  HF_SPACES_MODEL.md  LOCAL_AI_AGENTCPM_EXPLORE.md  LOCAL_AI_BENCHMARK.md  LOCAL_AI_VULKAN_IGPU_WINDOWS_AMD.md  MANUAL_TESTS.md  NICEGUI_MIGRATION_SPEC.md  PDF_LOW_LEVEL_OPERATOR_MIGRATION.md  PDF_TRANSLATION_SPEC.md  PERFORMANCE_LOCAL_AI.md  PHASE1_DAY1_CHECKLIST.md  PHASE1_DAY1_WORKLOG_2026-02-21.md  PHASE1_DAY1_WORKLOG_2026-02-23.md  PROMPTS_TASK00_AUDIT.md  PROMPT_TEMPLATES_SSOT.md  RAW_OUTPUT_MODE.md  README.md  RUNPOD_GPTOSS_SWALLOW_IQ4XS_2WEEK_EVAL.md  SPECIFICATION.md  SYSTEM_DESIGN.md  UI_SPECIFICATION_v2.md  UI_SPECIFICATION_v3.md  UI_SPECIFICATION_v4.md  USER_PROMPT_ONLY_AUDIT.md  txt_translation_process.md  ui_improvements_m3_expressive.md  ui_script_integration_review.md
docs/runpod/: AI_HANDOFF_MAZDA_LOCAL_LLM_DEMO_2026-02-21.md  PHASE1_DAY1_CHECKLIST.md  PHASE1_DAY1_WORKLOG_2026-02-21.md  PHASE1_DAY1_WORKLOG_2026-02-23.md  README.md  RUNPOD_CURRENT_IMPLEMENTATION.md  RUNPOD_GPTOSS_SWALLOW_IQ4XS_2WEEK_EVAL.md  RUNPOD_SETUP_GUIDE_SWALLOW_120B.md
ecm_translate/: __init__.py
ecm_translate/config/: __init__.py  settings.py
ecm_translate/models/: __init__.py  types.py
ecm_translate/processors/: __init__.py  base.py  excel_processor.py  font_manager.py  pdf_processor.py  pptx_processor.py  translators.py  word_processor.py
ecm_translate/services/: __init__.py  copilot_handler.py  prompt_builder.py  translation_service.py  updater.py
ecm_translate/storage/: __init__.py  history_db.py
ecm_translate/ui/: __init__.py  app.py  (+2 more)
installer/: build.bat  make_package.bat  make_package.ps1  make_sfx.bat  yakulingo.iss
launcher/: .gitignore  Cargo.toml  README.md  build.bat  launcher.c
launcher/src/: main.rs
local_ai/: manifest.json
nicegui_poc/: app.py  app_v2.py
packaging/: install_deps.bat  install_deps_step7_local_ai.bat  install_local_ai.ps1  make_distribution.bat  make_update_zip.bat  make_update_zip.py
prompts/: adjust_custom.txt  adjust_longer.txt  adjust_shorter.txt  copilot_injection_review.md  detect_language.txt  file_translate_to_en.txt  file_translate_to_en_concise.txt  file_translate_to_en_minimal.txt  file_translate_to_en_standard.txt  file_translate_to_jp.txt  local_batch_translate_to_en_json.txt  local_batch_translate_to_jp_json.txt  local_text_translate_to_en_3style_json.txt  local_text_translate_to_en_missing_styles_json.txt  local_text_translate_to_en_single_json.txt  local_text_translate_to_jp_json.txt  text_alternatives.txt  text_back_translate.txt  text_back_translate_to_en.txt  text_back_translate_to_jp.txt  text_check_my_english.txt  text_easy_explain.txt  text_explain_more.txt  text_question.txt  text_reply_email.txt  text_review_en.txt  text_summarize.txt  text_translate.txt  text_translate_en_to_jp.txt  text_translate_jp_to_en.txt  text_translate_revision_to_en.txt  text_translate_revision_to_jp.txt  text_translate_tabular_to_en.txt  text_translate_tabular_to_jp.txt  text_translate_to_en.txt  text_translate_to_en_clipboard.txt  text_translate_to_en_compare.txt  text_translate_to_en_concise.txt  text_translate_to_en_minimal.txt  text_translate_to_en_single.txt  (+10 more)
spaces/: README.md  __init__.py  app.py  requirements.txt  translator.py
tests/: conftest.py  test_app.py  test_app_async.py  test_app_relaunch_guard.py  test_back_translation_oku_normalize_task05.py  test_back_translation_template_selection_task02.py  test_base_processor.py  test_batch_translation_hangul_retry.py  test_batch_translation_numeric_oku_copilot_task01.py  test_batch_translation_numeric_oku_retry_copilot_task02.py  test_batch_translation_output_language_retry.py  test_batch_translator_max_chars_override_task05.py  test_bench_local_ai_metadata.py  test_bench_local_ai_overrides.py  test_bench_local_ai_sweep_7b.py  test_cancel_queue.py  test_clipboard_trigger.py  test_copilot_first_pass_hints_task04.py  test_copilot_first_pass_negative_task06.py  test_copilot_handler.py  test_copilot_handler_core.py  test_copilot_reference_citations.py  test_copilot_response_analysis.py  test_copilot_startup_readiness.py  test_csv_support.py  test_e2e_flows.py  test_e2e_local_ai_speed_http_ready.py  test_e2e_local_ai_speed_translate_button.py  test_e2e_txt_translation.py  test_error_handling.py  test_error_recovery.py  test_excel_paste_format.py  test_excel_processor.py  test_excel_processor_openpyxl.py  test_excel_processor_xlwings_merge_handling.py  test_excel_processor_xlwings_used_range_values.py  test_explanation_empty_task04.py  test_file_processing_edge_cases.py  test_file_queue_parallel.py  test_file_result_handling.py  (+135 more)
tools/: audit_local_prompt_lengths.py  audit_task00_baseline.py  bench_llama_bench_compare.py  bench_local_ai.py  bench_local_ai_input.txt  bench_local_ai_input_short.txt  bench_local_ai_sweep_7b.py  bench_local_prompt_builder.py  e2e_local_ai_speed.py  hf_to_gguf_quantize.py  repro_local_ai_translation.py
yakulingo/: __init__.py
(+173 files in other folders)
