[project]
name = "excel-translator"
version = "20251127"
description = "Excel Japanese to English Translation Tool (using M365 Copilot)"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "playwright>=1.40.0",
    "pywin32>=306",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "keyboard>=0.13.5",
    "pystray>=0.19.5",
    # PDF translation dependencies
    "numpy>=1.24.0",
    "PyMuPDF>=1.24.0",
    "yomitoku>=0.8.0",  # Includes: torch, torchvision, opencv-python, pypdfium2, etc.
    # Drag & Drop support
    "tkinterdnd2>=0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
]

# Coverage configuration (run with --cov to enable)
# Example: pytest --cov=ecm_translate --cov-report=term-missing

[tool.coverage.run]
source = ["ecm_translate"]
branch = true
omit = [
    "ecm_translate/ui/*",  # UI code is harder to test
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
