[project]
name = "yakulingo"
version = "20251127"
description = "YakuLingo - Bidirectional Japanese/English Translation Tool (using M365 Copilot)"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    # File processing
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    # PDF translation dependencies
    "numpy>=1.24.0",
    "PyMuPDF>=1.24.0",
    # Web UI
    "nicegui>=1.4.0",
]

[project.optional-dependencies]
# Windows-specific dependencies (currently unused - reserved for future features)
windows = [
    "pywin32>=306",
]
# OCR support (heavy dependencies)
ocr = [
    "yomitoku>=0.8.0",  # Includes: torch, torchvision, opencv-python, pypdfium2, etc.
]
# Test dependencies
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
]

# Coverage configuration (run with --cov to enable)
# Example: pytest --cov=ecm_translate --cov-report=term-missing

[tool.coverage.run]
source = ["ecm_translate"]
branch = true
omit = [
    "ecm_translate/ui/*",  # UI code is harder to test
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
