[project]
name = "yakulingo"
version = "0.0.1"
description = "YakuLingo - Bidirectional Japanese/English Translation Tool (local AI)"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core dependencies
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    # File processing
    "xlwings>=0.32.0; sys_platform == 'win32' or sys_platform == 'darwin'",  # Excel with shapes/textbox support (requires Excel)
    "openpyxl>=3.1.0",  # Fallback for Linux or no Excel installed
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    # PDF translation dependencies
    "numpy>=1.24.0",
    "pymupdf>=1.24.0",
    "fonttools>=4.53.0",  # Required for PyMuPDF font subsetting
    "pdfminer.six>=20231228",  # PDF font analysis (PDFMathTranslate compliant)
    "pypdfium2>=4.30.0",  # PDF to image conversion for layout analysis
    # Web UI
    "nicegui>=3.3.1",
    "pywebview>=5.0.0",  # Native window mode (no browser needed)
    "pystray>=0.19.5; sys_platform == 'win32'",
    # Email file processing
    "extract-msg>=0.48.0",  # Outlook MSG file support
    # Windows NTLM proxy authentication support (for auto-update)
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Layout analysis support (heavy dependencies)
ocr = [
    "paddlepaddle>=3.0.0",  # PaddlePaddle framework (must be installed before paddleocr)
    "paddleocr>=3.0.0",  # PP-DocLayout-L for document layout analysis
]
# Test dependencies
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pyright>=1.1.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
]
filterwarnings = [
    # TranslationCell is deprecated but kept for backward compatibility
    # Suppress warnings in tests that still use TranslationCell
    "ignore:TranslationCell is deprecated:DeprecationWarning",
    # Suppress PyMuPDF/SWIG internal warnings
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]
markers = [
    "unit: Unit tests for single components (fast, isolated)",
    "integration: Integration tests for multiple components",
    "slow: Tests that take longer than 0.5s",
    "e2e: End-to-end tests with file I/O",
]

# Coverage configuration (run with --cov to enable)
# Example: pytest --cov=yakulingo --cov-report=term-missing

[tool.coverage.run]
source = ["yakulingo"]
branch = true
omit = [
    "yakulingo/ui/*",  # UI code is harder to test
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
