[package]
name = "yakulingo-launcher"
version = "1.0.0"
edition = "2021"
description = "Lightweight native launcher for YakuLingo"

[dependencies]
# Minimal dependencies for small binary size

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "shellapi", "winbase", "handleapi", "errhandlingapi"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols
